--- a/src/SoloLevelling.vcxproj.filters
+++ b/src/SoloLevelling.vcxproj.filters
@@ -294,6 +294,9 @@
     <ClInclude Include="game\cheat\features\GodMode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="game\cheat\features\MobVacuum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="vendor\CommandMenu\src\Menu.cpp">
@@ -414,6 +417,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="game\cheat\features\GodMode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="game\cheat\features\MobVacuum.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
