feat: Improve Vacuum

--- a/src/SoloLevelling.vcxproj
+++ b/src/SoloLevelling.vcxproj
@@ -89,6 +89,7 @@
     <ClInclude Include="game\cheat\features\Debug.h" />
     <ClInclude Include="game\cheat\features\DisableWebView.h" />
     <ClInclude Include="game\cheat\features\DumbEnemies.h" />
+    <ClInclude Include="game\cheat\features\EntityManager.h" />
     <ClInclude Include="game\cheat\features\FovChanger.h" />
     <ClInclude Include="game\cheat\features\FPSUnlock.h" />
     <ClInclude Include="game\cheat\features\GodMode.h" />
@@ -171,6 +172,7 @@
     <ClCompile Include="game\cheat\features\Debug.cpp" />
     <ClCompile Include="game\cheat\features\DisableWebView.cpp" />
     <ClCompile Include="game\cheat\features\DumbEnemies.cpp" />
+    <ClCompile Include="game\cheat\features\EntityManager.cpp" />
     <ClCompile Include="game\cheat\features\FovChanger.cpp" />
     <ClCompile Include="game\cheat\features\FPSUnlock.cpp" />
     <ClCompile Include="game\cheat\features\GodMode.cpp" />
