--- a/src/SoloLevelling.vcxproj.filters
+++ b/src/SoloLevelling.vcxproj.filters
@@ -306,6 +306,9 @@
     <ClInclude Include="game\cheat\features\Debug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="game\cheat\features\EntityManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="vendor\CommandMenu\src\Menu.cpp">
@@ -435,6 +438,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="game\cheat\features\Debug.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="game\cheat\features\EntityManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
