--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,10 @@ on:
     branches: [ main ]
 
 env:
-  SOLUTION_FILE_PATH: ./SoloLevelling.sln
+  # SOLUTION_FILE_PATH: ./SoloLevelling.sln
+  PROJECT_FILE_PATH: ./cheat/SoloLevelling.vcxproj
   BUILD_CONFIGURATION: Release
+  PLATFORM: x64
 
 permissions:
   contents: read
@@ -25,7 +27,7 @@ jobs:
 
     - name: Build
       run: |
-        msbuild /m /p:Configuration=${{ env.BUILD_CONFIGURATION }} ${{ env.SOLUTION_FILE_PATH }}
+        msbuild ${{ env.PROJECT_FILE_PATH }} /p:Configuration=${{ env.BUILD_CONFIGURATION }} /p:Platform=${{ env.PLATFORM }}  
 
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3.1.0
